--- a/recipes/bhindia.html
+++ b/recipes/bhindia.html
@@ -59,6 +59,6 @@
                 <li>Next add the roasted okra in the onion tomato gravy and mix well. And cook for 5-7 minutes without covering the lid. Add the slitted green chillies.</li>
             </ol>
         </p>
-        <a href="index.html">Return to buffet page</a>
+        <a href="../index.html">Return to buffet page</a>
     </body>
 </html>
