--- a/recipes/biryani.html
+++ b/recipes/biryani.html
@@ -68,6 +68,6 @@
                 <li>Stir gently to combine. Bring to a boil. Reduce heat to very low, cover with a tight-fitting lid, and steam for 20 minutes without lifting the lid or stirring. Spoon biryani onto a warm serving dish.</li>
             </ol>
         </p>
-        <a href="index.html">Return to buffet page</a>
+        <a href="../index.html">Return to buffet page</a>
     </body>
 </html>
