--- a/recipes/pulao.html
+++ b/recipes/pulao.html
@@ -62,6 +62,6 @@
                 <li>Serve warm alongside fresh vegetables.</li>
             </ol>
         </p>
-        <a href="index.html">Return to buffet page</a>
+        <a href="../index.html">Return to buffet page</a>
     </body>
 </html>
